User dashboard has been updated.