@@ -2,8 +2,8 @@ package com.cloudmind.controller;
 
 import com.cloudmind.model.Subscriber;
 import com.cloudmind.model.User;
-import com.cloudmind.repository.SubscriberRepository;
 import com.cloudmind.service.EmailService;
+import com.cloudmind.repository.SubscriberRepository;
 import jakarta.servlet.http.HttpSession;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.springframework.beans.factory.annotation.Value;
@@ -21,36 +21,84 @@ public class PaymentController {
 
     private final SubscriberRepository repo;
     private final EmailService emailService;
-    private final com.cloudmind.controller.SubscriberRepository subscriberRepository;
+
 
     @Value("${app.hash-salt:cmind-default-salt-change-me}")
     private String hashSalt;
 
-    public PaymentController(SubscriberRepository repo, EmailService emailService, com.cloudmind.controller.SubscriberRepository subscriberRepository) {
+    public PaymentController(SubscriberRepository repo, EmailService emailService) {
         this.repo = repo;
         this.emailService = emailService;
-        this.subscriberRepository = subscriberRepository;
     }
 
     @GetMapping("/payment")
-    public String payment(Model model, HttpSession session) {
-        return "payment";
-    }
+    public String payment(
+            @RequestParam(required = false) String amount,
+            @RequestParam(required = false) String plan,
+            @RequestParam(required = false) String billing,
+            HttpSession session,
+            Model model) {
 
-    @GetMapping("/payment/success")
-    public String processPayment(HttpSession session, Model model, @RequestParam(value="success", required=false) String success) {
-        if (session.getAttribute("activeUser") == null) return "redirect:/login";
+        System.out.println("=== Payment GET request ===");
+        System.out.println("Amount: " + amount + ", Plan: " + plan + ", Billing: " + billing);
 
+        if (session.getAttribute("activeUser") == null) {
+            System.out.println("No active user - redirecting to login");
+            return "redirect:/login";
+        }
+
+        // Check if subscriber already exists in session
         Subscriber subscriber = (Subscriber) session.getAttribute("subscriber");
-        if (subscriber == null) return "redirect:/subscription";
 
-        model.addAttribute("subscriber", subscriber);
-        model.addAttribute("selectedPlan", session.getAttribute("selectedPlan"));
-        model.addAttribute("selectedBilling", session.getAttribute("selectedBilling"));
-        model.addAttribute("activeUser", session.getAttribute("activeUser"));
-        model.addAttribute("userRole", session.getAttribute("userRole"));
-        if ("true".equals(success)) model.addAttribute("success", true);
-        return "payment-success";
+        // If no subscriber in session but we have URL parameters, create one
+        if (subscriber == null && plan != null) {
+            System.out.println("Creating new subscriber from URL parameters");
+
+            // Handle both String and User object types for activeUser
+            Object activeUserObj = session.getAttribute("activeUser");
+            String userEmail = null;
+
+            if (activeUserObj instanceof User) {
+                userEmail = ((User) activeUserObj).getEmail();
+            } else if (activeUserObj instanceof String) {
+                // If activeUser is stored as String, try to get email from session
+                userEmail = (String) session.getAttribute("email");
+                if (userEmail == null) {
+                    userEmail = (String) activeUserObj; // assume it's the email
+                }
+            }
+
+            if (userEmail == null) {
+                System.out.println("Could not determine user email - redirecting to login");
+                return "redirect:/login";
+            }
+
+            subscriber = new Subscriber();
+            subscriber.setEmail(userEmail);
+            subscriber.setPlan(plan);
+            subscriber.setBilling(billing != null ? billing : "monthly");
+
+            // Store in session
+            session.setAttribute("subscriber", subscriber);
+            session.setAttribute("selectedPlan", plan);
+            session.setAttribute("selectedBilling", billing != null ? billing : "monthly");
+
+            System.out.println("Subscriber created and stored in session: " + subscriber.getEmail());
+        }
+
+        // If still no subscriber, redirect to subscription
+        if (subscriber == null) {
+            System.out.println("No subscriber data available - redirecting to subscription");
+            return "redirect:/subscription";
+        }
+
+        // Add data to model for the template
+        model.addAttribute("selectedPlan", subscriber.getPlan());
+        model.addAttribute("selectedBilling", subscriber.getBilling());
+        model.addAttribute("amount", amount);
+
+        System.out.println("Showing payment page for plan: " + subscriber.getPlan());
+        return "payment";
     }
 
     @PostMapping("/payment")
@@ -58,149 +106,175 @@ public class PaymentController {
             HttpSession session,
             Model model,
             @RequestParam("paymentMethod") String paymentMethod,
-            @RequestParam(value="cardNumber",  required=false) String cardNumber,
-            @RequestParam(value="cardName",    required=false) String cardName,
-            @RequestParam(value="expiryDate",  required=false) String cardExpiryDate,
-            @RequestParam(value="cvv",         required=false) String cvv,
+            @RequestParam(value="cardNumber", required=false) String cardNumber,
+            @RequestParam(value="cardName", required=false) String cardName,
+            @RequestParam(value="expiryDate", required=false) String cardExpiryDate,
+            @RequestParam(value="cvv", required=false) String cvv,
             @RequestParam(value="walletPhone", required=false) String walletPhone,
-            @RequestParam(value="walletPin",   required=false) String walletPin
+            @RequestParam(value="walletPin", required=false) String walletPin
     ) {
-        if (session.getAttribute("activeUser") == null) return "redirect:/login";
+        System.out.println("=== Payment POST processing started ===");
+
+        if (session.getAttribute("activeUser") == null) {
+            System.out.println("No active user - redirecting to login");
+            return "redirect:/login";
+        }
 
         Subscriber s = (Subscriber) session.getAttribute("subscriber");
         if (s == null) {
+            System.out.println("No subscriber in session - redirecting to subscription");
             return "redirect:/subscription";
         }
 
-        // Get the actual email from session - NOT from activeUser
-        String sessionEmail = (String) session.getAttribute("email");
-        String subscriberEmail = s.getEmail();
+        System.out.println("Processing payment for: " + s.getEmail() + ", Plan: " + s.getPlan());
 
-        System.out.println("Session email: '" + sessionEmail + "'");
-        System.out.println("Subscriber email: '" + subscriberEmail + "'");
-
-        // Validate email matches
-        if (sessionEmail == null || subscriberEmail == null || !sessionEmail.equals(subscriberEmail)) {
-            System.out.println("Security validation failed - email mismatch");
-            model.addAttribute("error", "Security validation failed - email mismatch");
-            return "redirect:/subscription";
+        // Validate payment method
+        if (paymentMethod == null || paymentMethod.trim().isEmpty()) {
+            model.addAttribute("error", "Please select a payment method");
+            model.addAttribute("selectedPlan", s.getPlan());
+            model.addAttribute("selectedBilling", s.getBilling());
+            return "payment";
         }
 
-        System.out.println("Email validation passed!");
-
-        // attach plan/billing chosen earlier
-        Object planObj = session.getAttribute("selectedPlan");
-        Object billObj = session.getAttribute("selectedBilling");
-        if (planObj != null) s.setPlan(planObj.toString());
-        if (billObj != null) s.setBilling(billObj.toString());
-
+        // Set payment details
         s.setPaymentMethod(paymentMethod);
 
-        try{
-            // store minimal, safe data
-            if ("stripe".equalsIgnoreCase(paymentMethod) || "paypal".equalsIgnoreCase(paymentMethod)) {
-                String digits = (cardNumber == null) ? "" : cardNumber.replaceAll("\\D", "");
-                if (digits.length() >= 4) s.setCardLast4(digits.substring(digits.length()-4));
-                if (!digits.isEmpty()) {
-                    s.setCardFingerprintHash(DigestUtils.sha256Hex(hashSalt + digits));
-                }
-            } else if ("esewa".equalsIgnoreCase(paymentMethod) || "khalti".equalsIgnoreCase(paymentMethod)) {
-                if (walletPhone != null && !walletPhone.isBlank()) {
-                    String masked = maskPhone(walletPhone);
-                    s.setWalletPhoneMasked(masked);
-                    s.setWalletPhoneHash(DigestUtils.sha256Hex(hashSalt + walletPhone));
-                }
+        // Validate based on payment method
+        if (paymentMethod.equals("stripe") || paymentMethod.equals("paypal")) {
+            if (cardNumber == null || cardNumber.trim().isEmpty() ||
+                    cardName == null || cardName.trim().isEmpty() ||
+                    cardExpiryDate == null || cardExpiryDate.trim().isEmpty() ||
+                    cvv == null || cvv.trim().isEmpty()) {
+
+                model.addAttribute("error", "Please fill in all card details");
+                model.addAttribute("selectedPlan", s.getPlan());
+                model.addAttribute("selectedBilling", s.getBilling());
+                return "payment";
             }
+        } else if (paymentMethod.equals("esewa") || paymentMethod.equals("khalti")) {
+            if (walletPhone == null || walletPhone.trim().isEmpty() ||
+                    walletPin == null || walletPin.trim().isEmpty()) {
 
-            // Set subscription as active and calculate expiry
-            s.setStatus("ACTIVE");
-            LocalDateTime subscriptionExpiryDate = calculateExpiryDate(s.getBilling());
-            s.setExpiryDate(subscriptionExpiryDate);
+                model.addAttribute("error", "Please fill in all wallet details");
+                model.addAttribute("selectedPlan", s.getPlan());
+                model.addAttribute("selectedBilling", s.getBilling());
+                return "payment";
+            }
+        }
 
-            // save subscriber row
+        try {
+            // Save subscriber
             repo.save(s);
+            System.out.println("Subscriber saved successfully to database");
 
-            try{
+            // Send confirmation email
+            try {
                 emailService.sendPaymentConfirmationEmail(
                         s.getEmail(), s.getPlan(), s.getBilling(), s.getPaymentMethod(), "N/A"
                 );
                 System.out.println("Payment confirmation email sent successfully");
-            }catch (Exception e){
-                System.out.println("Critical: Failure to send payment confirmation email: " + e.getMessage());
+            } catch (Exception e) {
+                System.out.println("Failed to send email: " + e.getMessage());
             }
 
-            // success modal trigger
-            model.addAttribute("success", true);
-            model.addAttribute("plan", s.getPlan());
-            model.addAttribute("selectedPlan", s.getPlan());
-            model.addAttribute("paymentMethod", s.getPaymentMethod());
-            model.addAttribute("activeUser", session.getAttribute("activeUser"));
-            model.addAttribute("userRole", session.getAttribute("userRole"));
+            // Store success data BEFORE clearing session
+            String planName = s.getPlan();
+            String billingType = s.getBilling();
+            String userEmail = s.getEmail();
 
-            // clear sensitive session after payment is done
+            // Clear session data
             session.removeAttribute("subscriber");
             session.removeAttribute("selectedPlan");
             session.removeAttribute("selectedBilling");
 
-            System.out.println("Payment processed successfully, staying on payment page");
-            // stay on payment.html instead of redirect
+            System.out.println("=== Payment completed successfully ===");
+            System.out.println("Plan: " + planName + ", Billing: " + billingType + ", Email: " + userEmail);
+
+            // Add success attributes to model instead of redirecting
+            model.addAttribute("paymentSuccess", true);
+            model.addAttribute("selectedPlan", planName);
+            model.addAttribute("selectedBilling", billingType);
+            model.addAttribute("paymentMethod", paymentMethod);
+            model.addAttribute("userEmail", userEmail);
+
+            // Return to payment page to show success modal
             return "payment";
+
         } catch (Exception e) {
             System.out.println("Payment processing failed: " + e.getMessage());
+            e.printStackTrace();
+
             model.addAttribute("error", "Payment processing failed: " + e.getMessage());
+            model.addAttribute("selectedPlan", s.getPlan());
+            model.addAttribute("selectedBilling", s.getBilling());
             return "payment";
         }
     }
 
-    @PostMapping("/payment-success")
-    public String processPaymentSuccess(
-            @RequestParam("razorpay_payment_id") String paymentId,
-            @RequestParam("razorpay_order_id") String orderId,
-            @RequestParam(value = "plan", required = false) String planName,
-            @RequestParam(value = "amount", required = false) String amount,
+//    @PostMapping("/payment-success")
+//    public String processPaymentSuccess(
+//            @RequestParam("razorpay_payment_id") String paymentId,
+//            @RequestParam("razorpay_order_id") String orderId,
+//            @RequestParam("plan") String planName,
+//            @RequestParam("amount") String amount,
+//            HttpSession session,
+//            RedirectAttributes redirectAttributes) {
+//
+//        try {
+//            // Get user details from session
+//            String userEmail = (String) session.getAttribute("email");
+//            String userName = (String) session.getAttribute("activeUser");
+//
+//            if (userEmail == null || userName == null) {
+//                redirectAttributes.addFlashAttribute("error", "Session expired. Please login again.");
+//                return "redirect:/login";
+//            }
+//
+//            // Send payment confirmation email
+//            emailService.sendPaymentConfirmationEmail(userEmail, userName, planName, amount, paymentId);
+//
+//            // Add success message
+//            redirectAttributes.addFlashAttribute("success",
+//                "Payment successful! Confirmation email sent to " + userEmail);
+//
+//            return "redirect:/user-dashboard";
+//
+//        } catch (Exception e) {
+//            System.err.println("Error processing payment: " + e.getMessage());
+//            redirectAttributes.addFlashAttribute("error", "Payment processed but email failed to send.");
+//            return "redirect:/user-dashboard";
+//        }
+//    }
+
+
+    @GetMapping("/payment/success")
+    public String paymentSuccess(
             HttpSession session,
-            RedirectAttributes redirectAttributes) {
+            Model model,
+            @RequestParam(value="success", required=false) String success,
+            @RequestParam(value="plan", required=false) String plan,
+            @RequestParam(value="billing", required=false) String billing,
+            @RequestParam(value="method", required=false) String method) {
 
-        try {
-            // Get user details from session
-            String userEmail = (String) session.getAttribute("email");
-            String userName = (String) session.getAttribute("activeUser");
-            String selectedPlan = (String) session.getAttribute("selectedPlan");
-            String selectedBilling = (String) session.getAttribute("selectedBilling");
+        System.out.println("=== Payment Success Page ===");
 
-            if (userEmail == null || userName == null) {
-                redirectAttributes.addFlashAttribute("error", "Session expired. Please login again.");
-                return "redirect:/login";
-            }
-
-            // Use session plan if not provided in request
-            if (planName == null) {
-                planName = selectedPlan;
-            }
-
-            // Calculate amount if not provided
-            if (amount == null) {
-                amount = calculateAmount(selectedPlan, selectedBilling);
-            }
-
-            // Send payment confirmation email
-            emailService.sendPaymentConfirmationEmail(userEmail, userName, planName, amount, paymentId);
-
-            // Clear subscription data from session
-            session.removeAttribute("subscriber");
-            session.removeAttribute("selectedPlan");
-            session.removeAttribute("selectedBilling");
-
-            redirectAttributes.addFlashAttribute("success",
-                    "Payment successful! Confirmation email sent to " + userEmail);
-
-            return "redirect:/user-dashboard";
-
-        } catch (Exception e) {
-            System.err.println("Error processing payment: " + e.getMessage());
-            redirectAttributes.addFlashAttribute("error", "Payment processed but email failed to send.");
-            return "redirect:/user-dashboard";
+        if (session.getAttribute("activeUser") == null) {
+            return "redirect:/login";
         }
+
+        model.addAttribute("activeUser", session.getAttribute("activeUser"));
+        model.addAttribute("userRole", session.getAttribute("userRole"));
+
+        if ("true".equals(success)) {
+            model.addAttribute("success", true);
+            model.addAttribute("selectedPlan", plan);
+            model.addAttribute("selectedBilling", billing);
+            model.addAttribute("paymentMethod", method);
+
+            System.out.println("Showing success page for plan: " + plan);
+        }
+
+        return "payment-success";
     }
 
     @GetMapping("/test-email")
@@ -271,17 +345,15 @@ public class PaymentController {
                 return "redirect:/user-dashboard";
             }
 
-            // Update the subscription plan
             Long subscriptionId = (Long) upgradeDetails.get("subscriptionId");
             String newPlan = (String) upgradeDetails.get("newPlan");
 
-            Optional<Subscriber> subOpt = subscriberRepository.findById(subscriptionId);
+            Optional<Subscriber> subOpt = repo.findById(subscriptionId);
             if (subOpt.isPresent()) {
                 Subscriber subscription = subOpt.get();
                 subscription.setPlan(newPlan);
-                subscriberRepository.save(subscription);
+                repo.save(subscription);
 
-                // Clear upgrade session data
                 session.removeAttribute("upgradeDetails");
 
                 redirectAttributes.addFlashAttribute("success",
